--- a/style.css
+++ b/style.css
@@ -60,13 +60,13 @@ body{
 }
 
 #footer{
-    height: 210px;
+    height: 160px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     padding: 40px;
-    margin-left: 20px;
+    margin-top: 50px;
     gap: 30px;
 }
 
@@ -111,6 +111,12 @@ p{
     background-color: #596D48;
     border: 0;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+#buttonLink{
+    font-family: Roboto, sans-serif;
+    font-size: 20px;
+    color: white;
 }
 
 #logIn{
@@ -170,4 +176,31 @@ input{
     height: 30px;
     width: 300px;
     padding-left: 10px;
+    border: #32353b;
+}
+
+input:valid{
+    border: 1px solid #596D48;
+}
+
+input:invalid{
+    border: 1px solid red;
+}
+
+#endingHtml{
+    height: 100%;
+}
+
+#ending{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#freakyHorse{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
